[metadata]
name = dieboldmariano
version = 1.1.0
author = Edoardo Annunziata
author_email = annunziata.edoardo@outlook.com
description = Diebold-Mariano test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edoannunziata/dieboldmariano
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
